deployment/overlays/develop/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  tls:
    - hosts:
        - develop-guestbook.junaid.guru
  rules:
    - host: develop-guestbook.junaid.guru
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: webapp
                port:
                  number: 8080
